--- a/dir-manager/src/main/res/layout/dirmanager_item_dir_manager.xml
+++ b/dir-manager/src/main/res/layout/dirmanager_item_dir_manager.xml
@@ -19,7 +19,6 @@
 
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="40dp"
@@ -32,7 +31,7 @@
 		android:layout_height="24dp"
 		android:layout_margin="8dp"
 		android:contentDescription="@android:string/ok"
-		app:srcCompat="@drawable/dirmanager_drawable_item_dir_manager"/>
+		android:src="@drawable/dirmanager_drawable_item_dir_manager"/>
 
 	<TextView
 		android:id="@+id/textView_title"
